--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,8 @@ jobs:
             - name: Install dependencies
               run: npm install
             - name: Build
+              env:
+                  VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
               run: npm run build
             - name: Setup Pages
               uses: actions/configure-pages@v3
