--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.40.0",
         "axios": "^1.7.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.23.1"
     },
     "devDependencies": {
+        "@tanstack/react-query-devtools": "^5.40.0",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
         "@testing-library/user-event": "^14.5.2",
