--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/material": "^5.15.19",
         "@tanstack/react-query": "^5.40.0",
         "axios": "^1.7.0",
         "react": "^18.2.0",
