--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "husky": "^9.0.11",
         "jsdom": "^24.0.0",
         "lint-staged": "^15.2.2",
+        "msw": "^2.3.1",
         "prettier": "^3.2.5",
         "sass": "^1.77.2",
         "typescript": "^5.2.2",
